# gloss

./: README.md  gloss.py  pyproject.toml  test_all_features.md
src/gloss/: __init__.py
tests/: test_gloss.py
