[project]
name = "gloss"
version = "0.1.0"
description = "Convert Markdown to beautiful, editorial-style HTML pages"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[project.scripts]
gloss = "gloss:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
